[project]
name = "podgenai"
version = "0.1.0"
description = "GPT-4 based informational audiobook/podcast mp3 generator"
authors = [
    { name = "Ouroboros Chrysopoeia", email = "impredicative@users.noreply.github.com" }
]
dependencies = [
    "fire>=0.6.0",
    "openai>=1.14.3",
    "pathvalidate>=3.2.0",
    "python-dotenv>=1.0.1",
    "semantic-text-splitter>=0.9.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
podgenai = "podgenai.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]  # Run as "rye run <command>"
check = { chain = ["check-lint", "check-fmt" ] }
"check-lint" = "rye lint"
"check-fmt" = "rye fmt --check"
fix = { chain = ["fix-lint", "fix-fmt" ] }
"fix-lint" = "rye lint --fix"
"fix-fmt" = "rye fmt"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/podgenai"]

[tool.ruff]
line-length = 200

[tool.ruff.lint]
ignore = ["E731"]
